test_data/networking/bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: blue-green-demo
  labels:
    app: demo-app
    app.kubernetes.io/part-of: kubilitics-demo
    rollout-strategy: blue-green
spec:
  selector:
    app: demo-app
    version: blue
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-preview
  namespace: blue-green-demo
  labels:
    app: demo-app
    app.kubernetes.io/part-of: kubilitics-demo
    rollout-strategy: blue-green
spec:
  selector:
    app: demo-app
    version: green
  ports:
    - name: http
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-bluegreen
  namespace: blue-green-demo
  labels:
    app.kubernetes.io/part-of: kubilitics-demo
    rollout-strategy: blue-green
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-external
  rules:
    - host: bluegreen.kubilitics.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 80
          - path: /preview
            pathType: Prefix
            backend:
              service:
                name: demo-app-preview
                port:
                  number: 8080
